display: make the Apply button unsensitive for invalid configuration

If the configuration is not applicable, due to HW constraints we
know about, make the button insensitive, to avoid an error dialog
later on.

https://bugzilla.gnome.org/show_bug.cgi?id=727023